# kochipylli

./: .gitignore  CMakeLists.txt  contextparser.py  kfiletreeview.py  kmetamodel.py  main.py  mainwindow.py  service.py
